# Engram

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
Adaptive Memory-Augmented Agent Framework Docs/: Adaptive Memory-Augmented Agent Framework (AMAAF).md  implementation.py
Adaptive Memory-Augmented Agent Framework Docs/Adaptive Memory-Augmented Agent Framework (AMAAF)/: Full Implementation Plan.md  Implementation Gaps.md  Integration Implementation Plan.md  (+2 more)
engram-backend/: README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
engram-backend/api/: __init__.py  dependencies.py  main.py  middleware.py
engram-backend/api/routers/: auth.py  conversation.py  health.py  memory.py
engram-backend/benchmarks/: README.md  __init__.py  db_benchmarks.py  run_benchmarks.py
engram-backend/core/: __init__.py  config.py  database.py  logging.py  security.py
engram-backend/infrastructure/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
engram-backend/infrastructure/docker/init-scripts/: 01-init-db.sql
engram-backend/infrastructure/docker/monitoring/: prometheus.yml
engram-backend/infrastructure/docker/nginx/: nginx.conf
engram-backend/infrastructure/monitoring/: prometheus.yml
engram-backend/infrastructure/nginx/: nginx.conf
engram-backend/models/: __init__.py  conversation.py  memory.py  user.py
engram-backend/scripts/: start.sh
engram-backend/services/: __init__.py  embedding_service.py  graph_service.py  llm_service.py  memory_manager.py  retrieval_system.py
engram-backend/tasks/: __init__.py  celery_app.py  maintenance_tasks.py  memory_tasks.py
engram-backend/tests/: __init__.py  conftest.py
engram-backend/tests/integration/: __init__.py  test_memory_system.py
engram-backend/tests/unit/: __init__.py  test_memory_manager.py
engram-backend/utils/: __init__.py  embeddings.py  validators.py
engram-mcp/: debug-server.py  pyproject.toml  start-mcp.sh  test_async.py  test_inline_tools.py  test_mcp_client.py  test_simple.py
engram-mcp/src/engram_mcp/: benchmark.py  client.py  config.py  locomo_benchmark.py  server.py  tools.py
examples/: README.md
tests/: conftest.py  pytest.ini
(+17 files in other folders)
