[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-mcp"
version = "0.1.0"
description = "MCP server for Engram persistent memory"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0,<3",
    "httpx>=0.27",
]

[project.scripts]
engram-mcp = "engram_mcp.server:main"
engram-mcp-benchmark = "engram_mcp.benchmark:main"
engram-mcp-locomo-benchmark = "engram_mcp.locomo_benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/engram_mcp"]
